updatebase url for emails and bug fix
